Fixed unwanted html-markup, aligned titles, removed copyrights

--- a/src/files/assets/third/jqgrid/css/ui.jqgrid.css
+++ b/src/files/assets/third/jqgrid/css/ui.jqgrid.css
@@ -15,7 +15,7 @@
 .ui-jqgrid .ui-jqgrid-htable th {}
 .ui-jqgrid .ui-jqgrid-htable th div {overflow: hidden; position:relative; padding: 8px 0;}
 .ui-jqgrid .ui-jqgrid-htable th div div{padding: 0}
-.ui-th-column, .ui-jqgrid .ui-jqgrid-htable th.ui-th-column {overflow: hidden;white-space: nowrap;text-align:left;border-top : 0 none;border-bottom : 0 none;}
+.ui-th-column, .ui-jqgrid .ui-jqgrid-htable th.ui-th-column {overflow: hidden; text-align:left;border-top : 0 none;border-bottom : 0 none; vertical-align: bottom;}
 .ui-th-ltr, .ui-jqgrid .ui-jqgrid-htable th.ui-th-ltr {border-left : 0 none; border-right: 0 none;}
 .ui-th-rtl, .ui-jqgrid .ui-jqgrid-htable th.ui-th-rtl {border-right : 0 none;}
 .ui-first-th-ltr {border-right: 1px solid; }
